# OpenLingu

./: .gitignore  README.md  TODO.md  count_lines.py  database.py  install.py  main.py  requirements.txt  run.py  test_server.py
Lection_Creator/: README.md
client/: README.md  main.py  pyproject.toml
client/src/: main.py
client/src/pages/: authpages.py  connectingpage.py  downloadlectionpage.py  learningpage.py  mainpage.py  mainpages.py  serverpage.py  setuppage.py
client/src/pages/Languagetrees/: spanish_main.py
client/src/pages/Loaders/: __init__.py  languagechooser.py
client/src/pages/Widgetlibary/: Lectionwidgets.py  lectionviewer.py
client/src/pages/lectionhomepages/: english_main.py  spanish_main.py
client/src/pages/mainpages/: __init__.py  account.py  dailytaskspage.py  dictionary.py  learningpage.py  lection_example.json  settings.py  vocabs.py
client/src/pages/setuppages/: __init__.py  goal.py  nativelanguage.py  profile.py  studylanguage.py
client/src/pages/utils/: lection1.json  lection2.json  lection_example.json  lectionparser.py
dev/: README.md  add_lection.py  chatgpt_lection_prompt.md  openlingu_cli.py  reset_contributor_password.py  simple_present.json  test_lection_creator.json
docs/: 404.html  index.html
kivy/: auth_pages.kv  custom_widgets.kv  main_ui.kv  new_user.kv
lectioncreator/: pyproject.toml
server/: auth.py  check_db.py  check_db_schema.py  check_language_db.py  database.py  firebase_data.json  init_db.py  main.py  models.py  parameters.py  reset_databases.py  security.py  test_login.py  test_token.py  (+1 more)
(+44 files in other folders)
