[project]
name = "openlingu"
version = "0.1.0"
description = "An app designed to make learning a new language more easy and efficient"
readme = "README.md"
requires-python = "<3.13"
authors = [
    { name = "MariusAngermann08" }
]
dependencies = [
    "flet==0.28.3",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
    "sqlalchemy>=1.4.23",
    "python-dotenv>=0.19.0",
    "pydantic>=1.8.0",
    "requests",
    "googletrans @ https://files.pythonhosted.org/packages/19/3d/4e3a1609bf52f2f7b00436cc751eb977e27040665dde2bd57e7152989672/googletrans-3.1.0a0.tar.gz", # Must be like this to fix issue on android and ios
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "io.github.mariusangermann08"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "openlingu"

# company name to display in about app dialogs
company = "MariusAngermann08"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by MariusAngermann08"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
